added tests and script for contracts

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -4,7 +4,37 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "test:verbose": "hardhat test --verbose",
+    "test:gas": "REPORT_GAS=true hardhat test",
+    "test:coverage": "COVERAGE=true hardhat coverage",
+    "test:all": "hardhat run scripts/test-all.ts",
+    "deploy:local": "hardhat run scripts/deploy.ts --network localhost",
+    "deploy:sepolia": "hardhat run scripts/deploy.ts --network sepolia",
+    "deploy:mumbai": "hardhat run scripts/deploy.ts --network polygonMumbai",
+    "deploy:base-sepolia": "hardhat run scripts/deploy.ts --network baseSepolia",
+    "deploy:arbitrum-sepolia": "hardhat run scripts/deploy.ts --network arbitrumSepolia",
+    "deploy:optimism-sepolia": "hardhat run scripts/deploy.ts --network optimismSepolia",
+    "deploy:mainnet": "hardhat run scripts/deploy.ts --network ethereum",
+    "deploy:polygon": "hardhat run scripts/deploy.ts --network polygon",
+    "deploy:base": "hardhat run scripts/deploy.ts --network base",
+    "deploy:arbitrum": "hardhat run scripts/deploy.ts --network arbitrum",
+    "deploy:optimism": "hardhat run scripts/deploy.ts --network optimism",
+    "deploy-and-test": "hardhat run scripts/deploy-and-test.ts",
+    "verify:sepolia": "hardhat verify --network sepolia",
+    "verify:mumbai": "hardhat verify --network polygonMumbai",
+    "verify:base-sepolia": "hardhat verify --network baseSepolia",
+    "verify:arbitrum-sepolia": "hardhat verify --network arbitrumSepolia",
+    "verify:optimism-sepolia": "hardhat verify --network optimismSepolia",
+    "verify:mainnet": "hardhat verify --network ethereum",
+    "verify:polygon": "hardhat verify --network polygon",
+    "verify:base": "hardhat verify --network base",
+    "verify:arbitrum": "hardhat verify --network arbitrum",
+    "verify:optimism": "hardhat verify --network optimism",
+    "clean": "hardhat clean",
+    "node": "hardhat node",
+    "console": "hardhat console"
   },
   "keywords": [],
   "author": "",
@@ -12,10 +42,16 @@
   "type": "module",
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^3.0.3",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^22.18.6",
+    "chai": "^4.3.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.0.6",
+    "hardhat-gas-reporter": "^2.0.0",
+    "solidity-coverage": "^0.8.0",
     "typescript": "~5.8.0",
     "viem": "^2.37.8"
   },
